src/objects/LTA_BillImport__c.object
<CustomObject>
    <description>Staging area for imported bill data to allow import logic to be maintained w/in Salesforce.com</description>
    <fields>
        <fullName>Bill_Author__c</fullName>
        <label>Bill Author</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Caption__c</fullName>
        <label>Bill Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Session__c</fullName>
        <label>Bill Session</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_State__c</fullName>
        <label>Bill State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <label>Bill Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_f__c</fullName>
        <formula>Bill_State__c+Bill_Session__c+Bill_Type__c+LPAD(TRIM(Bill_Number__c), 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1_Number__c</fullName>
        <label>CB1 Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1_Session__c</fullName>
        <label>CB1 Session</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1_State__c</fullName>
        <label>CB1 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1_Type__c</fullName>
        <label>CB1 Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1_f__c</fullName>
        <formula>CB1_State__c+CB1_Session__c+CB1_Type__c+LPAD(TRIM(CB1_Number__c), 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB1 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2_Number__c</fullName>
        <label>CB2 Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2_Session__c</fullName>
        <label>CB2 Session</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2_State__c</fullName>
        <label>CB2 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2_Type__c</fullName>
        <label>CB2 Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2_f__c</fullName>
        <formula>CB2_State__c+CB2_Session__c+CB2_Type__c+LPAD(TRIM(CB2_Number__c), 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB2 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3_Number__c</fullName>
        <label>CB3 Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3_Session__c</fullName>
        <label>CB3 Session</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3_State__c</fullName>
        <label>CB3 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3_Type__c</fullName>
        <label>CB3 Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3_f__c</fullName>
        <formula>CB3_State__c+CB3_Session__c+CB3_Type__c+LPAD(TRIM(CB3_Number__c), 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB3_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <label>CCR</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG__c</fullName>
        <label>ENG</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR__c</fullName>
        <label>ENR</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBA__c</fullName>
        <label>FBA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFN__c</fullName>
        <label>FFN</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIL__c</fullName>
        <label>FIL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HBA__c</fullName>
        <label>HBA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCA__c</fullName>
        <label>HCA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCS__c</fullName>
        <label>HCS</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HFA__c</fullName>
        <label>HFA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HFN__c</fullName>
        <label>HFN</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPA__c</fullName>
        <label>HPA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <label>Last Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <description>Date data was processed</description>
        <label>Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBA__c</fullName>
        <label>SBA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCA__c</fullName>
        <label>SCA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCS__c</fullName>
        <label>SCS</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFA__c</fullName>
        <label>SFA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFN__c</fullName>
        <label>SFN</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPA__c</fullName>
        <label>SPA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VET__c</fullName>
        <label>VET</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Telicon Datum</label>
    <nameField>
        <displayFormat>Raw-{0000000000}</displayFormat>
        <label>Raw Datum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telicon Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>